--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="Dark themed website template built on AstroJS, designed for fictional startup"
+      content="ITIL Compliant IT Service Management Software for IT Teams"
     />
     <title>{title}</title>
   </head>
